[gd_scene load_steps=9 format=3 uid="uid://6mj0nf754due"]

[ext_resource type="Theme" uid="uid://dvwt0gddw54iw" path="res://VNTheme.tres" id="1"]
[ext_resource type="Texture2D" uid="uid://7r1d1uu8g2l6" path="res://Resources/Graphics/GeneralUI/menu_background.png" id="2"]
[ext_resource type="FontFile" uid="uid://bicjs0tjxcn80" path="res://Resources/Fonts/orange-kid.regular.ttf" id="3"]
[ext_resource type="Script" path="res://GeneralUIScripts/SavingScreen.gd" id="4"]
[ext_resource type="FontFile" path="res://Resources/Fonts/orange-kid_small.tres" id="5"]
[ext_resource type="PackedScene" path="res://GeneralUIScenes/PopupPanel.tscn" id="6"]
[ext_resource type="Material" uid="uid://3tb8733jaxk6" path="res://Resources/AlphaScissor.tres" id="7"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("3")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/65/0 = Vector2(0, 0)
cache/0/65/0/ascent = 0.0
cache/0/65/0/descent = 0.0
cache/0/65/0/underline_position = 0.0
cache/0/65/0/underline_thickness = 0.0
cache/0/65/0/scale = 1.0
cache/0/65/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/65/0/kerning_overrides/65/0 = Vector2(0, 0)

[node name="SavingScreen" type="TextureRect"]
process_mode = 3
offset_right = 1200.0
offset_bottom = 675.0
theme = ExtResource("1")
texture = ExtResource("2")
expand_mode = 1
script = ExtResource("4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 148.0
offset_right = 1348.0
offset_bottom = 936.0
scale = Vector2(0.75, 0.75)
theme_override_constants/separation = 29

[node name="TitleContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TitleContainer"]
material = ExtResource("7")
layout_mode = 2
theme_override_fonts/font = SubResource("1")
text = "Select a name for the save"

[node name="ExplanationContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 20

[node name="Label" type="Label" parent="VBoxContainer/ExplanationContainer"]
material = ExtResource("7")
layout_mode = 2
theme_override_fonts/font = ExtResource("5")
text = "Select a save to overwrite or write a name for a new save."

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 27

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/MarginContainer"]
material = ExtResource("7")
layout_mode = 2
placeholder_text = "Save name"
clear_button_enabled = true

[node name="ListContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 30

[node name="ItemList" type="ItemList" parent="VBoxContainer/ListContainer"]
material = ExtResource("7")
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
theme = ExtResource("1")
allow_reselect = true

[node name="ButtonContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 37
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 30

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="VBoxContainer/ButtonContainer/HBoxContainer"]
material = ExtResource("7")
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Save"

[node name="BackButton" type="Button" parent="VBoxContainer/ButtonContainer/HBoxContainer"]
material = ExtResource("7")
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cancel"

[node name="PopupPanel" parent="." instance=ExtResource("6")]
size = Vector2i(302, 330)

[connection signal="text_submitted" from="VBoxContainer/MarginContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="item_activated" from="VBoxContainer/ListContainer/ItemList" to="." method="_on_ItemList_item_activated"]
[connection signal="item_selected" from="VBoxContainer/ListContainer/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/HBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
